Fixed navbar squishing onto fission text

--- a/style/style.css
+++ b/style/style.css
@@ -56,12 +56,13 @@ html, body {
 
 #container {
   width: 100%;
-  min-width: 1080px;
+  min-width: 1275px;
   text-align: justify;
   text-justify: inter-word;
 }
 
 #banner {
+  position: relative;
   width: 100%;
   height: 120px;
   background: #000000;
